[metadata]
name = requirements-txt
version = 0.0.1
author = Rodrigo
author_email = pypi@rodri.pw
description = Wrong pypi command
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rfaafr/requirements-txt
project_urls =
    Bug Tracker = https://github.com/rfaafr/requirements-txt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
